--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,25 +7,32 @@
     android:orientation="vertical"
     tools:context=".activity.SearchActivity">
 
-    <androidx.appcompat.widget.Toolbar
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:background="@drawable/searchround"
-        android:layout_height="?attr/actionBarSize">
+        android:layout_height="?actionBarSize"
+        android:orientation="horizontal"
+        android:weightSum="2">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbarsearch1"
+            android:layout_width="50dp"
+            android:layout_height="?attr/actionBarSize">
+        </androidx.appcompat.widget.Toolbar>
 
         <EditText
-            android:id="@+id/editSearch"
+            android:id="@+id/editSearch1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:hint="Nhập tên sản phẩm bạn muốn tìm kiếm"
-            android:backgroundTint="#E8E5E5"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="50dp"
+            android:background="@drawable/searchround"
+            android:hint="Nhập tên tìm kiếm"
+            android:minHeight="48dp"
             android:textColor="@color/black"
             android:textSize="17sp">
 
         </EditText>
-    </androidx.appcompat.widget.Toolbar>
+    </LinearLayout>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
