--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -1,25 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.CategoryFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".fragment.CategoryFragment"
+    android:orientation="vertical">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_itemcategory"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:background="@color/primaryTextColor"
+        app:titleTextColor="@color/white"
+        app:titleMarginStart="110dp"
+        app:title="Danh mục sản phẩm">
+
+        <ImageView
+            android:id="@+id/reportcategory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="0dp"
+            android:src="@drawable/ic_analytics"
+            ></ImageView>
+    </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            android:background="#B6B3B3"
-            android:backgroundTint="#5E84A6"
-            android:gravity="center"
-            android:text="Danh mục sản phẩm"
-            android:textColor="@color/whiteTextColor"
-            android:textSize="20dp"
-            android:textStyle="bold"></TextView>
 
         <ListView
             android:id="@+id/listviewcategory"
@@ -29,4 +38,4 @@
         </ListView>
     </LinearLayout>
 
-</FrameLayout>
+</LinearLayout>
