update status order, cancel order

--- a/app/src/main/res/layout/activity_change_info.xml
+++ b/app/src/main/res/layout/activity_change_info.xml
@@ -161,6 +161,7 @@
                             android:drawableLeft="@drawable/ic_baseline_email"
                             android:drawablePadding="10dp"
                             android:hint="@string/login_email_hint"
+                            android:focusable="false"
                             android:inputType="textEmailAddress"
                             android:maxLines="1" />
                     </com.google.android.material.textfield.TextInputLayout>
