--- a/app/src/main/res/layout/line_category.xml
+++ b/app/src/main/res/layout/line_category.xml
@@ -29,6 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:text="NameCategory"
+            android:textColor="@color/black"
             android:textSize="15dp" />
 
     </LinearLayout>
